--- a/style4.css
+++ b/style4.css
@@ -8,7 +8,7 @@
     max-width: 960px;
     margin: 0 auto;
     grid-template-columns: repeat(6,1fr);
-    grid-auto-rows: 150px;
+    /* grid-auto-rows: 150px; */
     grid-gap: 10px;
 }
 .child{
@@ -19,7 +19,10 @@
     
 }
 .child img{
-    object-fit: contain;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
 
 }
 .one{
